--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
@@ -24,4 +25,27 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-      
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: maxmorev/eshop-customer-api
+        tags: 0.0.${{ github.run_number }}
+
+    - name: Install doctl
+      uses: digitalocean/action-doctl@v2
+      with:
+        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+    - name: Update deployment file
+      run: TAG=0.0.$(echo ${{ github.run_number }} | head -c7) && sed -i 's|maxmorev/eshop-customer-api:latest|maxmorev/eshop-customer-api:'${TAG}'|' $GITHUB_WORKSPACE/eshop-customer-api-deploy.yaml
+
+    - name: Print image version
+      run: cat $GITHUB_WORKSPACE/eshop-customer-api-deploy.yaml | grep image
+
+    - name: Save DigitalOcean kubeconfig
+      run: doctl kubernetes cluster kubeconfig save k8s-eshop
+    - name: Deploy to DigitalOcean Kubernetes
+      run: kubectl apply -f $GITHUB_WORKSPACE/eshop-customer-api-deploy.yaml
