--- a/eshop-customer-api-deploy.yaml
+++ b/eshop-customer-api-deploy.yaml
@@ -66,7 +66,7 @@ spec:
           image: maxmorev/eshop-customer-api:latest
           volumeMounts:
             - name: h2-storage
-              mountPath: /opt/micro/h2o
+              mountPath: /opt/micro/h2
           ports:
             - containerPort: 8080
               name: springboot
