--- a/eshop-customer-api-deploy.yaml
+++ b/eshop-customer-api-deploy.yaml
@@ -53,14 +53,11 @@ spec:
       labels:
         app: eshop-customer-api
     spec:
+      terminationGracePeriodSeconds: 10
       securityContext:
         runAsUser: 1001
         runAsGroup: 0
         fsGroup: 0
-      volumes:
-        - name: h2-storage
-          persistentVolumeClaim:
-            claimName: pvc-customer
       containers:
         - name: eshop-customer-api
           image: maxmorev/eshop-customer-api:latest
@@ -72,7 +69,7 @@ spec:
               name: springboot
           resources:
             requests:
-              memory: "250Mi"
+              memory: "500Mi"
               cpu: "250m" # 1/4 core
             limits:
               memory: "500Mi"
@@ -81,7 +78,7 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 20
+            initialDelaySeconds: 90
             timeoutSeconds: 5
             periodSeconds: 3
             failureThreshold: 1
@@ -89,7 +86,11 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 30
+            initialDelaySeconds: 100
             timeoutSeconds: 2
             periodSeconds: 8
             failureThreshold: 1
+      volumes:
+        - name: h2-storage
+          persistentVolumeClaim:
+            claimName: pvc-customer
